export class Schoolclass {
  id: string;
  room: string;
}
